add_library(delta-basic STATIC
    # Include files
    include/animation.h
    include/animation_export_data.h
    include/animation_export_file.h
    include/animation_group.h
    include/animation_object_controller.h
    include/asset_manager.h
    include/audio_asset.h
    include/bone.h
    include/character.h
    include/color_scale.h
    include/console.h
    include/console_shaders.h
    include/default_shaders.h
    include/default_ui_shaders.h
    include/delta_basic_engine.h
    include/delta_core.h
    include/delta_engine.h
    include/delta_physics.h
    include/font.h
    include/font_map.h
    include/keyframe.h
    include/material.h
    include/model_asset.h
    include/os_utilities.h
    include/path.h
    include/pose.h
    include/render_node.h
    include/render_skeleton.h
    include/safe_string.h
    include/scene_object_asset.h
    include/shader_base.h
    include/shader_controls.h
    include/shader_set.h
    include/shader_stage.h
    include/skeleton.h
    include/texture_asset.h
    include/text_renderer.h
    include/ui_renderer.h
    include/window_handler.h

    # Source files
    src/animation.cpp
    src/animation_export_data.cpp
    src/animation_export_file.cpp
    src/animation_group.cpp
    src/animation_object_controller.cpp
    src/asset_manager.cpp
    src/audio_asset.cpp
    src/bone.cpp
    src/character.cpp
    src/color_scale.cpp
    src/console.cpp
    src/console_shaders.cpp
    src/default_shaders.cpp
    src/default_ui_shaders.cpp
    src/delta_engine.cpp
    src/font.cpp
    src/font_map.cpp
    src/keyframe.cpp
    src/material.cpp
    src/model_asset.cpp
    src/os_utilities.cpp
    src/path.cpp
    src/pose.cpp
    src/render_node.cpp
    src/render_skeleton.cpp
    src/safe_string.cpp
    src/scene_object_asset.cpp
    src/shader_base.cpp
    src/shader_set.cpp
    src/shader_stage.cpp
    src/skeleton.cpp
    src/texture_asset.cpp
    src/text_renderer.cpp
    src/ui_renderer.cpp
    src/window_handler.cpp
)

target_link_libraries(delta-basic PUBLIC
    delta-core
    delta-physics
)
